--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 Flask==2.2.5
 Flask-CORS==4.0.0
 pandas==1.5.3
@@ -7,3 +8,5 @@ matplotlib==3.6.3
 seaborn==0.12.2
 openpyxl==3.1.2
 gunicorn==21.2.0
+python-dotenv==1.0.0
+scipy==1.10.1
