--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 
-Flask==2.2.5
-Flask-CORS==4.0.0
-pandas==1.5.3
-numpy==1.24.3
-plotly==5.15.0
-matplotlib==3.6.3
-seaborn==0.12.2
-openpyxl==3.1.2
-gunicorn==21.2.0
-python-dotenv==1.0.0
-scipy==1.10.1
+Flask>=2.2.5
+Flask-CORS>=4.0.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.15.0
+matplotlib>=3.6.0
+seaborn>=0.12.0
+openpyxl>=3.1.0
+gunicorn>=21.0.0
+python-dotenv>=1.0.0
+scipy>=1.10.0
